--- a/style.css
+++ b/style.css
@@ -1,29 +1,55 @@
+body {
+    padding: 0;
+    margin: 0;
+}
+
 * {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
     background-color: antiquewhite;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
 .formsingup {
-    width: 90%;
-    height: 50px;
-    background-color: rgb(48, 242, 181);
+    width: 40%;
+    height: 80%;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: white;
+}
+
+.imgsignup,
+.formsingup {
+    display: inline-block;
 }
 
 h1 {
-    color: blue;
+    color: rgb(72, 72, 193);
     text-align: center;
+    background-color: white;
+
 }
 
 p {
     text-align: center;
+
 }
 
 .box {
+    padding: 5px;
+    border: 1px solid black;
     border-radius: 5px;
-    width: 100%;
-    height: 60px;
+    width: calc(100% - 100px);
+    height: 30px;
     margin-bottom: 20px;
+    margin-left: 40px;
     font-size: 17px;
+
 }
 
 button {
@@ -31,26 +57,43 @@ button {
 }
 
 .btnsignup {
-    width: 100%;
-    height: 60px;
+    padding: 5px;
+    border: 1px solid black;
+    border-radius: 5px;
+    width: calc(100% - 89px);
+    height: 40px;
+    margin-left: 40px;
     background-color: blue;
     color: white;
     font-weight: bold;
     font-size: 20px;
+
 }
 
-button ~ div {
+button~div {
     margin-bottom: 20px;
+    background-color: white;
+
 }
 
 .google {
-    width: 45%;
-    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 25%;
+    height: 30px;
+    background-color: white;
+    margin-right: 5px;
 }
 
 .facebook {
-    width: 45%;
-    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 25%;
+    height: 30px;
+    background-color: white;
+
 }
 
 img {
@@ -60,8 +103,37 @@ img {
 
 ::placeholder {
     color: black;
+    font-size: 15px;
 }
 
 .title {
+    display: flex;
+    justify-content: center;
     margin-top: 20px;
+    background-color: white;
+
+}
+
+.imgsignup-container {
+    width: 30%;
+    height: 80%;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
+#imgsignup {
+    max-width: 100%;
+    width: 100vh;
+    height: 600px;
+}
+
+.btnsignup1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btnicon,
+.btntext {
+    margin-right: 10px;
 }
